--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -163,129 +163,22 @@ section > div {
 }
 
 .image_cell {
-/*    border: 1px solid orange;*/
+    border: 1px solid orange;
     float: left;
     position: relative;
     width: 20%;
+    transition: opacity 0.5s;
 }
 
-.image_cell.collapsed .image_cell_toggle {
+.image_cell:hover {
+    opacity: 0.5;
+}
+
+.image_cell_toggle {
     cursor: pointer;
 }
 
-.image_small {
-/*    border: 1px solid purple;*/
-    height: 15vw;
-    padding: 0 10px 24px 0;
-}
 
-.image_small > div {
-    margin-bottom: 24px;
-}
-
-.image_small img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-    margin: 0 auto;
-}
-
-.image_large {
-    position: relative;
-    left: -5px;
-    padding: 0 5px;
-    box-sizing: content-box;
-    overflow: hidden;
-    background-color: white;
-    max-height: 0;
-    transition: max-height .5s ease-in-out,
-                margin-bottom .1s .2s;
-    width: 500%;
-}
-
-.image_large .expanded_content img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    padding: 40px;
-    margin: 0 auto;
-    box-sizing: border-box;
-}
-
-.image_cell.expanded {
-/*    border: 1px solid green;*/
-}
-
-.image_cell.expanded .image_large {   
-    max-height: 9999px;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    margin-bottom: 48px;
-}
-
-.image_cell:nth-of-type(5n+2) .image_large {
-    margin-left: -100%;
-}
-
-.image_cell:nth-of-type(5n+3) .image_large {
-    margin-left: -200%;
-}
-
-.image_cell:nth-of-type(5n+4) .image_large {
-    margin-left: -300%;
-}
-
-.image_cell:nth-of-type(5n+5) .image_large {
-    margin-left: -400%;
-}
-
-.image_cell:nth-of-type(5n+6) {
-    clear: left;
-}
-
-.image_cell_close {
-    width: 24px;
-    height: 24px;
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    cursor: pointer;
-}
-
-.image_cell_close img {
-    width: 100%;
-    height: auto;
-}
-
-.expanded_content {
-    margin-top: 24px;
-}
-
-.large_left {
-/*    border: 1px solid green; */  
-    width: 67%;
-    margin-right: 7.5%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.large_left a {
-    padding-left: 0px;
-    text-transform: lowercase;
-}
-
-.large_right {
-/*    border: 1px solid blue; */ 
-    width: 25%;
-    display: inline-block;
-    vertical-align: top; 
-/*    float: right;*/
-}
-
-.large_right img {
-    width: 100%;
-    height: auto;
-}
 
 /************************************************
     HEADER
@@ -576,10 +469,16 @@ section > div {
 /*    width: 18%;
     margin-right: 1.5%;  */
     width: 20%; 
+    text-align: center;
 }
 
 .pub_list_spreads img {
     width: 100%;
+    height: auto; 
+}
+
+.pub_list_spreads .portrait {
+    width: 65%;
     height: auto; 
 }
 
