--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -76,6 +76,7 @@ p {
 }
 
 .clear {
+    border: 1px solid black;
     clear: both;
 }
 
@@ -93,7 +94,9 @@ p {
 }
 
 .wrapper {
+    border: 1px solid pink;
     border-bottom: 1px solid black;
+    width: 78.5%;
 }
 
 section {
@@ -159,6 +162,7 @@ section > div {
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
+    position: relative;
 /*    padding: 10px 5px 0;*/
 }
 
@@ -166,8 +170,19 @@ section > div {
     border: 1px solid orange;
     float: left;
     position: relative;
-    width: 20%;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s, height 0.5s;
+}
+
+[data-col="5"] li {
+    width: 20% !important;    
+}
+
+[data-col="4"] li {
+    width: 25% !important;      
+}
+
+[data-col="3"] li {
+    width: 33.3% !important;      
 }
 
 .image_cell:hover {
@@ -178,7 +193,16 @@ section > div {
     cursor: pointer;
 }
 
+.image_small {
+    padding-bottom: 24px;
+}
 
+.grid_large {
+    border: 1px solid red;
+    height: 0;
+/*    overflow: visible;*/
+    transition: height 0.5s;
+}
 
 /************************************************
     HEADER
@@ -247,7 +271,7 @@ section > div {
 
 #bottom_header li {
 /*    border: 1px solid pink;*/
-    margin: 0 0 0 36px;
+    margin: 0 0 0 24px;
 }
 
 #main_logo {
@@ -426,7 +450,7 @@ section > div {
 
 #publications_list {
 /*    border: 1px solid blue;*/
-    width: 95%;
+/*    width: 95%;*/
 }
 
 #publications_list li {
@@ -468,7 +492,7 @@ section > div {
     vertical-align: top; 
 /*    width: 18%;
     margin-right: 1.5%;  */
-    width: 20%; 
+/*    width: 20%; */
     text-align: center;
 }
 
@@ -505,8 +529,7 @@ section > div {
     margin-bottom: 24px;
 }
 
-.archive_post .image_large {
-/*    border: 1px solid green;*/
+/*.archive_post .image_large {
     width: 400%;
     padding-bottom: 24px;
 }
@@ -529,7 +552,7 @@ section > div {
 
 .archive_post:nth-of-type(4n+5) {
     clear: left;
-}
+}*/
 
 .archive_list_spreads {  
     margin-top: 24px;  
@@ -592,8 +615,7 @@ section > div {
     margin-left: 5%;
 }
 
-.coll_post .image_large {
-/*    border: 1px solid green;*/
+/*.coll_post .image_large {
     width: 300%;
     padding-bottom: 24px;
 }
@@ -617,7 +639,7 @@ section > div {
 .coll_post:nth-of-type(5n+5) .image_large, 
 .coll_post:nth-of-type(5n+4) .image_large {
     margin-left: 0%;
-}
+}*/
 
 .coll_expanded_left, .coll_expanded_right {
 /*    border: 1px solid green;*/
