--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -9,6 +9,17 @@ Version:        2016.07.29
     display: none !important;
 }
 
+#console {
+    position: fixed;
+    z-index: 999999;
+    height: 40vh;
+    top: 20vh;
+    width: 60vw;
+    left: 20vw;
+    background-color: orange;
+    display: none;
+}
+
 /************************************************
     CSS RESET
 ************************************************/
@@ -33,7 +44,10 @@ body {
     font-size: 1.05em;
     line-height: 1.25;
     box-sizing: border-box;
-/*    height: 700vh;*/
+}
+
+body.mobile {
+    overflow: auto;   
 }
 
     @media ( max-width: 1000px ) {
@@ -101,10 +115,15 @@ p {
 #wrapper {
 /*    border: 8px solid green;*/
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
     position: relative;
     top: 0;
+    overflow: hidden;
+    height: 100vh;
+}
+
+.mobile #wrapper {
+    overflow: auto;
+    height: auto;   
 }
 
 .wrapper {
@@ -115,10 +134,11 @@ p {
     margin: 0 0 48px 20%;  
 }
 
-    @media ( max-width: 500px ) {
+    @media ( max-width: 800px ) {
         .wrapper {
+            /*border: 1px solid orange;*/
             margin-left: 12px;
-            width: 95%;
+            width: 98%;
         }
     }
 
@@ -126,16 +146,53 @@ section {
 /*    border: 1px solid purple;*/
     background-color: white;
     width: 100%;
-    height: 100vh;
-    position: absolute;
-    overflow: auto;
     top: 0;
     transform: translateY(0);
+    height: 100vh;
+    overflow: hidden;
+    position: absolute;
     display: none;
+}
+
+.mobile section {
+    height: auto; 
+    overflow: auto; 
+    position: relative;
+    display: block;  
+}
+
+.current {
+    overflow: auto;   
 }
 
 #section_1 {
     display: block;
+    z-index: 6;
+}
+
+#section_2 {
+    display: block;
+    z-index: 5;
+}
+
+#section_3 {
+    display: block;
+    z-index: 4;
+}
+
+#section_4 {
+    display: block;
+    z-index: 3;
+}
+
+#section_5 {
+    display: block;
+    z-index: 2;
+}
+
+#section_6 {
+    display: block;
+    z-index: 1;
 }
 
 .content_wrapper {
@@ -143,7 +200,12 @@ section {
     position: absolute;
     top: 0;
     width: 100%;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.mobile .content_wrapper {
+    position: relative;
 }
 
 .large_left {
@@ -208,9 +270,19 @@ section {
     overflow: hidden;
 }
 
+.mobile .scroll_block {
+    overflow: auto;
+}
+
 iframe {
     width: 100%;
 }
+
+    @media ( max-width: 500px ) {
+        iframe {
+            width: 98%;
+        }
+    }
 
 /************************************************
     IMAGE GRID
@@ -247,6 +319,22 @@ iframe {
     width: 50% !important;      
 }
 
+    @media ( max-width: 900px ) {
+        [data-col="5"] li, [data-col="4"] li, [data-col="3"] li  {
+            width: 50% !important;    
+        }
+    }
+
+    @media ( max-width: 500px ) {
+         .image_grid {
+            width: 92% !important;    
+        }
+
+        .image_grid li {
+            width: 100% !important;    
+        }
+    }
+
 .image_cell:hover {
 /*    opacity: 0.5;*/
 }
@@ -254,6 +342,12 @@ iframe {
 .image_cell_toggle {
     cursor: pointer;
 }
+
+    @media ( max-width: 500px ) {
+        .image_cell_toggle {
+            cursor: default;
+        }
+    }
 
 .image_small {
     padding-bottom: 24px;
@@ -434,7 +528,19 @@ iframe {
     margin: 0 0 0 24px;
 }
 
-    @media ( max-width: 500px ) {
+    @media ( max-width: 760px ) {
+        #bottom_header {
+            text-align: center;
+        } 
+        #bottom_header ul {
+            display: inline-block;
+        }   
+        #bottom_header li {
+            margin: 0 6px 0 6px;
+        }       
+    }
+
+    @media ( max-width: 600px ) {
         #bottom_header_fixed {
 /*            border: 1px solid purple;*/
             bottom: 0;
@@ -482,7 +588,7 @@ iframe {
     width: 90%;
 }
 
-    @media ( max-width: 500px ) {
+    @media ( max-width: 760px ) {
         #main_logo {
             display: none;
         }
@@ -568,12 +674,15 @@ iframe {
 }
 
 .home_image {
-    text-align: left;
+    text-align: center;
 }
 
 .home_caption {
 /*    border: 1px solid blue;*/
     text-align: left;
+/*    background-color: white;*/
+    margin-top: -6px;
+    padding: 4px 4px 6px 4px;
 }
 
     @media ( max-width: 500px ) {
@@ -589,12 +698,12 @@ iframe {
 .home_text {
     width: 33%;
     height: auto;
-    position: absolute;
-    z-index: 9999;
+/*    position: absolute;
+    z-index: 9999;*/
     background-color: #fff59e;
     padding: 12px 12px 16px 12px;
     text-align: left;
-    display: none;
+/*    display: none;*/
     font-size: 0.9em;
 }
 
@@ -671,6 +780,12 @@ iframe {
     height: auto;
 }
 
+    @media ( max-width: 500px ) {
+        .col img {
+            width: 98%;
+        }
+    }
+
 .left_col {
 
 }
@@ -693,6 +808,12 @@ iframe {
     PUBLICATIONS + EXHIBITIONS
 ************************************************/
 
+.list_post .col_2 {
+/*    border: 1px solid purple;*/
+    float: right;
+    padding-right: 2%;
+}
+
 .banner {
     border-bottom: 1px solid black;
     width: 98%;
@@ -712,6 +833,23 @@ iframe {
 .banner_link {
     color: black;
 }
+
+    @media ( max-width: 700px ) {
+        .banner_post {
+            margin-bottom: 12px;
+        }
+        .banner_link {
+            width: 23%;
+            margin-right: 1%;
+        }      
+    }
+
+    @media ( max-width: 500px ) {
+        .banner_link {
+/*            border: 1px solid red;*/
+            width: 31%;
+        }      
+    }
 
 .banner_link:hover {
     color: #ec008c;
@@ -763,6 +901,13 @@ iframe {
     width: 50%;
     float: right;
 }
+
+    @media ( max-width: 500px ) {
+        .pub_image {
+            margin-left: 25%;
+            float: none;
+        }     
+    }
 
 .pub_list_price {
     font-weight: bold;
@@ -834,6 +979,13 @@ iframe {
     height: auto;
     margin-bottom: 12px;
 }
+
+    @media ( max-width: 500px ) {
+        .archive_image img.portrait {
+            width: 60%;
+            margin-left: 19%;
+        }
+    }
 
 
 /************************************************
