--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -450,7 +450,8 @@ iframe {
     position: fixed;
     top: 0;
     font-size: 0.85em;
-/*    opacity: 0.2;*/
+    padding-top: 10px;
+    padding-bottom: 14px;
 }
 
 #top_header li {
@@ -499,8 +500,13 @@ iframe {
     height: 30px;
 }
 
-#bottom_header_fixed  {
+#bottom_header_fixed {
 /*    border: 1px solid red;*/
+    position: fixed;
+/*    top: 30px;*/
+/*    height: 80px;*/
+    z-index: 999999;
+    width: 100%;
 }
 
 #bottom_header_fixed .header {
@@ -619,68 +625,33 @@ iframe {
 #home_video iframe {
     width: 100%;
     height: 100%;
+    pointer-events: none;
 }
 
-#home_single_image img {
-    min-width: 100%;
-    width: auto;
-    height: 100%;
-}
-
-#home_multiple_images {
-/*    border: 1px solid purple;*/
-    margin-top: 5vh;
-    text-align: center;
-    height: 85vh;
-    display: block;
-    position: relative;
-/*    padding-left: 5%;*/
-}
-
-#home_multiple_images ul {
-/*    border: 1px solid blue;*/
-    width: 80%;
-    height: 85%;
-    margin: 0 ;
-    position: relative;
-}
-
-#home_multiple_images li {
-/*    border: 1px solid blue;*/
-    display: inline-block;
-    margin: 24px 12px;
-    z-index: 1;
-    opacity: 0;
-    width: 40%;
-    position: absolute;
-    height: auto;
-    cursor: pointer;
-}
-
-    @media ( max-width: 500px ) {
-        #home_multiple_images li {
-            width: 60%;
-        }
-    }
-
-.home_multiple_image img {
+#home_single_image .bg_image {
     width: 100%;
-    height: auto;
+    height: 100%;
+    background-repeat: none;
+    background-size: cover;
+    background-position: center;
+    -webkit-transition: all 2s;
+            transition: all 2s;
 }
 
-.home_multiple_image .portrait {
-    width: 75%;
-    height: auto;
+.blurred {
+    -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
+            filter: blur(20px);
+
 }
 
 .home_image {
     text-align: center;
 }
 
-.home_caption {
-/*    border: 1px solid blue;*/
+/*.home_caption {
+/*    border: 1px solid blue;
     text-align: left;
-/*    background-color: white;*/
+/*    background-color: white;
     margin-top: -6px;
     padding: 4px 4px 6px 4px;
 }
@@ -689,22 +660,23 @@ iframe {
         .home_caption {
             display: none;
         }
-    }
+    }*/
 
-.home_piece_name {
+/*.home_piece_name {
     text-transform: uppercase;
 }
-
+*/
 .home_text {
     width: 33%;
     height: auto;
-/*    position: absolute;
-    z-index: 9999;*/
+    position: absolute;
+/*    z-index: 9999;*/
     background-color: #fff59e;
     padding: 12px 12px 16px 12px;
     text-align: left;
 /*    display: none;*/
     font-size: 0.9em;
+    top: 38px;
 }
 
     @media ( max-width: 500px ) {
@@ -722,7 +694,7 @@ iframe {
     display: block;
 }
 
-.home_text .home_close {
+/*.home_text .home_close {
     position: absolute;
     top: 12px;
     right: 12px;
@@ -731,7 +703,7 @@ iframe {
     cursor: pointer;
     background: url(img/close.svg) no-repeat center;
     background-size: contain;
-}
+}*/
 
 /************************************************
     ABOUT
