--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -639,7 +639,9 @@ iframe {
         }
         #mobile_menu img {
             width: auto;
-            height: 100%;
+            height: 50%;
+            top: 20%;
+            position: absolute;
         }
     }
 
@@ -667,19 +669,66 @@ iframe {
         }
     }
 
-#home_video, #home_single_image {
+#home_video, .home_single_image {
 /*    border: 2px solid purple;*/
     width: 100%;
     height: 100vh;
+    position: absolute;
+    top: 0;
 }
 
-#home_video iframe {
+#player {
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     pointer-events: none;
+    position: absolute;
+    transition: all 0.5s;
 }
 
-#home_single_image .bg_image {
+#player.paused {
+    left: 17.5%;
+    top: 15%;
+    width: 70%;
+    height: 70%;
+    pointer-events: auto;   
+}
+
+#home_video_button {
+/*    border: 1px solid red;*/
+    position: absolute;
+    top: 50%;
+    left: 42.5vw;
+    transform: translateY(-50%);
+    width: 15vw;
+    height: 15vw;
+    margin: 0 auto;
+    text-align: center;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+#home_video_button:hover {
+    opacity: 1;
+}
+
+#home_video_button img {
+    width: 100%;
+    height: auto;
+}
+
+.home_single_image {
+    opacity: 0;
+    transition: opacity 2s;
+}
+
+.home_single_image.visible {
+    opacity: 1;
+}
+
+.home_single_image .bg_image {
     width: 100%;
     height: 100%;
     background-repeat: none;
@@ -692,31 +741,11 @@ iframe {
 .blurred {
     -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
             filter: blur(20px);
-
 }
 
 .home_image {
     text-align: center;
 }
-
-/*.home_caption {
-/*    border: 1px solid blue;
-    text-align: left;
-/*    background-color: white;
-    margin-top: -6px;
-    padding: 4px 4px 6px 4px;
-}
-
-    @media ( max-width: 500px ) {
-        .home_caption {
-            display: none;
-        }
-    }*/
-
-/*.home_piece_name {
-    text-transform: uppercase;
-}
-*/
 
 .home_text {
     width: 33%;
@@ -726,14 +755,15 @@ iframe {
     background-color: #fff59e;
     padding: 12px 12px 16px 12px;
     text-align: left;
-/*    display: none;*/
     font-size: 0.9em;
-    top: 48px;
+    display: none;
 }
 
     @media ( max-width: 500px ) {
         .home_text {
             width: 90%;
+            left: 5%;
+            top: 15%;
         }
     }
 
@@ -746,7 +776,8 @@ iframe {
     display: block;
 }
 
-/*.home_text .home_close {
+.home_text .home_close {
+/*    border: 1px solid purple;*/
     position: absolute;
     top: 12px;
     right: 12px;
@@ -755,7 +786,7 @@ iframe {
     cursor: pointer;
     background: url(img/close.svg) no-repeat center;
     background-size: contain;
-}*/
+}
 
 /************************************************
     ABOUT
