--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -295,7 +295,7 @@ iframe {
 ************************************************/
 
 .image_grid {
-/*    border: 1px solid black;*/
+/*    border: 1px solid orange;*/
     width: 98%;
     margin: 0 auto;
     overflow: hidden;
@@ -307,6 +307,15 @@ iframe {
     float: left;
     position: relative;
     transition: opacity 0.5s, height 0.5s;
+}
+
+[data-col="6"] li {
+    width: 15% !important;    
+    margin-right: 2%; 
+}
+
+[data-col="6"] li:nth-child(6n) { 
+/*    margin-right: 0% !important; */
 }
 
 [data-col="5"] li {
@@ -626,7 +635,8 @@ iframe {
     text-align: center;
     cursor: pointer;
     position: fixed;
-    width: 100%;
+/*    width: 100%;*/
+    width: 60px;
     z-index: 999;
     background-color: white;
     display: none;
@@ -635,6 +645,8 @@ iframe {
     @media ( max-width: 500px ) {
         #mobile_menu {
             display: block;
+            text-align: left;
+            padding-left: 12px;
 
         }
         #mobile_menu img {
@@ -1077,8 +1089,38 @@ iframe {
     margin-bottom: 24px;
 }
 
+#coll_letters {
+/*    border: 1px solid red;*/
+    margin-bottom: 20px;
+}
+
+.coll_letter {
+/*    border: 1px solid purple;*/
+    border-bottom: 2px solid transparent;
+    margin: 0 2px;
+    padding: 1px 2px;
+    display: inline-block;
+}
+
+.active:hover, #coll_letters .clicked {
+    border-bottom: 2px solid #ec008c;
+    display: inline-block;
+}
+
+.coll_letter a {
+    font-weight: normal;
+    color: gray;
+    cursor: text;
+}
+
+.active a {
+    color: black;
+    cursor: pointer;
+}
+
 .coll_post {
     border: 2px solid white;
+/*    border: 2px solid green;*/
 /*    width: 95%;*/
     margin-bottom: 24px;
     padding-bottom: 24px;
