--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -151,6 +151,7 @@ section {
     height: 100vh;
     overflow: hidden;
     position: absolute;
+    box-shadow: 0px 5px 20px rgba(0,0,0,0.2);
     display: none;
 }
 
@@ -171,27 +172,22 @@ section {
 }
 
 #section_2 {
-    display: block;
     z-index: 5;
 }
 
 #section_3 {
-    display: block;
     z-index: 4;
 }
 
 #section_4 {
-    display: block;
     z-index: 3;
 }
 
 #section_5 {
-    display: block;
     z-index: 2;
 }
 
 #section_6 {
-    display: block;
     z-index: 1;
 }
 
@@ -453,7 +449,8 @@ iframe {
 .header a {
     color: black;
     font-weight: normal;
-    border-bottom: 1px solid transparent;   
+    border-bottom: 1px solid transparent; 
+    padding-bottom: 2px;  
 }
 
 .header a:hover {
@@ -608,11 +605,11 @@ iframe {
 #main_logo {
 /*    border: 1px solid blue;*/
 /*    position: fixed;*/
-    background-color: white;
+/*    background-color: white;*/
     position: absolute;
     left: -2px;
-    bottom: 0;
-    z-index: 999;
+    bottom: 30px;
+    z-index: 99999;
     width: 18%;
     min-width: 190px;
     text-align: left;
@@ -620,8 +617,13 @@ iframe {
     padding: 12px;
 }
 
+#bottom_header_fixed #main_logo {
+    top: 40px;
+}
+
 #main_logo img {
     width: 100%;
+    margin-top: -12px;
 }
 
     @media ( max-width: 760px ) {
@@ -981,7 +983,7 @@ iframe {
     margin-bottom: 24px;
 }
 
-.pub_list_text p {
+.exhibition_text, .pub_list_text p {
     margin-bottom: 24px;
 }
 
@@ -1074,6 +1076,7 @@ iframe {
 
 #error_message {
     color: #ec008c;
+    margin-top: 12px;
 }
 
 #coll_content {
@@ -1100,6 +1103,13 @@ iframe {
     margin: 0 2px;
     padding: 1px 2px;
     display: inline-block;
+    color: gray;
+    cursor: text;
+}
+
+.active {
+    color: black;
+    cursor: pointer;
 }
 
 .active:hover, #coll_letters .clicked {
