--- a/themes/PROYECTO_BACHUE/assets/css/style.css
+++ b/themes/PROYECTO_BACHUE/assets/css/style.css
@@ -9,7 +9,7 @@ Version:        2016.07.29
     display: none !important;
 }
 
-#mobile_console {
+/*#mobile_console {
     position: fixed;
     z-index: 999999;
     height: 40vh;
@@ -22,13 +22,12 @@ Version:        2016.07.29
 
 
 #mobile_console p {
-/*    border: 1px solid yellow;*/
     width: 100%;
     height: 25%;
     text-align: center;
     font-size: 3em;
     color: black;
-}
+}*/
 
 /************************************************
     CSS RESET
@@ -340,7 +339,7 @@ iframe {
 .image_grid {
 /*    border: 1px solid orange;*/
     width: 98%;
-    margin: 0 auto;
+/*    margin: 0 auto;*/
     overflow: hidden;
     position: relative;
 }
@@ -740,8 +739,10 @@ iframe {
 /*    border: 2px solid purple;*/
     width: 100%;
     height: 100vh;
+    height: calc(100vh - 40px);
     position: absolute;
     top: 0;
+    margin-top: 40px;
 }
 
 #player {
@@ -807,6 +808,24 @@ iframe {
             transition: all 2s;
 }
 
+.home_caption {
+/*    border: 1px solid pink;*/
+    background-color: black;
+    padding: 4px 6px;
+    color: white;
+    position: absolute;
+    top: 12px;
+    left: 8px;
+}
+
+    @media ( max-width: 500px ) {
+        .home_caption {
+            top: 10px;
+            left: 0px;
+            width: 100%;
+        }
+    }
+
 .blurred {
     -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
             filter: blur(20px);
@@ -850,7 +869,7 @@ iframe {
     transform: rotate(-180deg);
 }
 
-.home_text {
+.home_text_wrapper {
     width: 33%;
     height: auto;
     position: absolute;
@@ -859,14 +878,21 @@ iframe {
     padding: 12px 12px 16px 12px;
     text-align: left;
     font-size: 0.9em;
+    overflow: hidden;
     display: none;
 }
 
+.home_text {
+    height: 100%;
+    width: 100%;
+}
+
     @media ( max-width: 500px ) {
-        .home_text {
+        .home_text_wrapper {
             width: 80%;
             left: 10%;
             top: 15%;
+            max-height: 75vh;
         }
     }
 
@@ -879,7 +905,7 @@ iframe {
     display: block;
 }
 
-.home_text .home_close {
+.home_text_wrapper .home_close {
 /*    border: 1px solid purple;*/
     position: absolute;
     top: 12px;
@@ -1175,6 +1201,10 @@ iframe {
     margin-bottom: 12px;
 }
 
+#pword_input {
+    margin-bottom: 24px;
+}
+
 #error_message {
     color: #ec008c;
     margin-top: 12px;
@@ -1211,6 +1241,13 @@ iframe {
     color: gray;
     cursor: text;
 }
+
+    @media ( max-width: 600px ) {
+        .coll_letter {
+            width: 6.3%;
+            font-size: 1.4em;
+        }
+    }
 
 .active {
     color: black;
@@ -1251,6 +1288,12 @@ iframe {
     margin: 5%;
     text-align: center;
 }
+
+    @media ( max-width: 600px ) {
+        .coll_image {
+            display: none;
+        }
+    }
 
 .coll_image img {
     width: 100%;
